2009-01-28  Eli Zaretskii  <eliz@gnu.org>

	* ls-lisp.el (ls-lisp-classify): Propertize file name before
	concatenating the type indicating character.
	(ls-lisp-format): Don't propertize file-name only if
	ls-lisp-classify already did.

2009-01-28  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-event-error-hooks): Fix docstring.  Describe
	second parameter of hook functions.
	(dbus-handle-event): Apply it.

2009-01-28  Chong Yidong  <cyd@stupidchicken.com>

	* mail/rmail.el (rmail-toggle-header): Don't reset
	rmail-header-style permanently (bug#2016).

2009-01-28  Denis Howe  <denis.howe@gmail.com>

	* complete.el (PC-do-completion): Correct case when completion is
	unambiguous.

2009-01-28  Stephen Berman  <stephen.berman@gmx.net>

	* calendar/todo-mode.el (todo-insert-item-here): Prevent insertion
	of a new entry inside of an existing entry.  Minor code cleanup.
	(Bug#2084)
	(todo-add-category): Change the interactive spec.  Signal an error
	if the Todo file is non-empty but contains no category.  Reject
	category names that could induce bugs and confusion.  Call
	todo-mode if the Todo file is new and unsaved.  Simplify handling
	of local variables cookie.  Properly display the newly added
	category in Todo mode.
	(todo-show): Call todo-initial-setup only if there is neither a
	Todo file nor a corresponding unsaved buffer.  (Bug#2085)
	(todo-category-alist): Delete function.
	(todo-completing-read): New function.
	(todo-insert-item, todo-jump-to-category): Use it.
	(todo-insert-item): Make the use of the prefix argument conform to
	the doc string.  (Bug#2086)

2009-01-28  Glenn Morris  <rgm@gnu.org>

	* mail/rmail.el (rmail-expunge-and-save): Always show a message,
	even when called from the summary.  (Bug#2075)
	(rmail-no-mail-p): New func, extracted from rmail-show-message-maybe.
	(rmail-show-message-maybe): Use rmail-no-mail-p.
	(rmail-show-message): If empty folder, do nothing.  (Bug#2076)